--- a/research_map/research_map.html
+++ b/research_map/research_map.html
@@ -1,1 +1,259 @@
-<img src="{{ '/assets/images/covers/researchmap.png' | relative_url }}" alt="Responsive image" >
+<svg id="_000" data-name="000" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 988.43 610.03">
+  <defs>
+    <style>
+      .cls-1,
+      .cls-2,
+      .cls-3 {
+        fill: none;
+        stroke-miterlimit: 10;
+      }
+
+      .cls-1 {
+        stroke: #06f;
+        stroke-width: 2px;
+      }
+
+      .cls-2 {
+        stroke: #666;
+        stroke-dasharray: 5;
+      }
+
+      .cls-3 {
+        stroke: #4d4d4d;
+      }
+
+      .cls-4 {
+        font-size: 25px;
+      }
+
+      .cls-13,
+      .cls-15,
+      .cls-4 {
+        fill: #06f;
+        font-family: AvenirNext-Medium, Avenir Next;
+        font-weight: 500;
+      }
+
+      .cls-5 {
+        letter-spacing: -0.02em;
+      }
+
+      .cls-15,
+      .cls-6 {
+        font-size: 16px;
+      }
+
+      .cls-6 {
+        fill: #4d4d4d;
+        font-family: AvenirNext-Regular, Avenir Next;
+      }
+
+      .cls-7 {
+        letter-spacing: -0.01em;
+      }
+
+      .cls-8 {
+        letter-spacing: 0.02em;
+      }
+
+      .cls-9 {
+        letter-spacing: -0.02em;
+      }
+
+      .cls-10 {
+        letter-spacing: -0.01em;
+      }
+
+      .cls-11 {
+        letter-spacing: 0em;
+      }
+
+      .cls-12 {
+        letter-spacing: -0.02em;
+      }
+
+      .cls-13 {
+        font-size: 21.5px;
+      }
+
+      .cls-14 {
+        letter-spacing: -0.03em;
+      }
+
+      .cls-16 {
+        letter-spacing: -0.03em;
+      }
+
+      .cls-17 {
+        letter-spacing: -0.06em;
+      }
+
+      .cls-18 {
+        letter-spacing: 0em;
+      }
+
+      .cls-19 {
+        letter-spacing: -0.01em;
+      }
+
+      .cls-20 {
+        letter-spacing: -0.02em;
+      }
+
+      .cls-21 {
+        letter-spacing: -0.09em;
+      }
+
+      .cls-22 {
+        letter-spacing: -0.02em;
+      }
+
+      .cls-23 {
+        letter-spacing: -0.01em;
+      }
+
+      .cls-24 {
+        letter-spacing: 0.02em;
+      }
+
+      .cls-25 {
+        letter-spacing: -0.01em;
+      }
+
+      .cls-26 {
+        letter-spacing: -0.01em;
+      }
+
+      .cls-27 {
+        letter-spacing: -0.01em;
+      }
+
+      .cls-28 {
+        letter-spacing: 0em;
+      }
+
+      .cls-29 {
+        letter-spacing: -0.02em;
+      }
+    </style>
+  </defs>
+  <title>research roadmap</title>
+  <line id="_8" data-name="8" class="cls-1" x1="866.48" y1="165.84" x2="866.48" y2="272.03" />
+  <line id="_7" data-name="7" class="cls-1" x1="866.48" y1="334.84" x2="866.48" y2="441.03" />
+  <line id="_6" data-name="6" class="cls-1" x1="866.48" y1="503.84" x2="866.48" y2="610.03" />
+  <line id="_5" data-name="5" class="cls-2" x1="363.21" y1="218.82" x2="475.74" y2="218.82" />
+  <line id="_4" data-name="4" class="cls-2" x1="362.98" y1="387.82" x2="475.74" y2="387.82" />
+  <line id="_3" data-name="3" class="cls-2" x1="363.21" y1="557.27" x2="475.74" y2="557.27" />
+  <line id="_2" data-name="2" class="cls-2" x1="475.98" y1="265.34" x2="362.98" y2="341.34" />
+  <line id="_1" data-name="1" class="cls-2" x1="475.98" y1="434.34" x2="362.98" y2="510.34" />
+  <g id="kuang">
+    <rect class="cls-3" x="0.5" y="172.25" width="362.71" height="93.14" />
+    <rect class="cls-3" x="552.26" y="262.86" width="362.71" height="93.14" transform="translate(1390.71 528.7) rotate(-180)" />
+    <rect class="cls-3" x="0.5" y="341.25" width="362.71" height="93.14" />
+    <rect class="cls-3" x="552.26" y="431.86" width="362.71" height="93.14" transform="translate(1390.71 866.7) rotate(-180)" />
+    <rect class="cls-3" x="0.5" y="510.25" width="362.71" height="93.14" />
+    <rect class="cls-3" x="552.26" y="600.86" width="362.71" height="93.14" transform="translate(1390.71 1204.7) rotate(-180)" />
+  </g><text class="cls-4" transform="translate(288.11 21.35)">RESEARCH R<tspan class="cls-5" x="150.27" y="0">O</tspan>
+    <tspan x="171.05" y="0">ADMAP</tspan>
+  </text>
+  <line class="cls-1" x1="269.91" y1="44.47" x2="569.04" y2="44.47" /><text class="cls-6" transform="translate(65.36 214.9)">Wh<tspan class="cls-7" x="24.88" y="0">a</tspan>
+    <tspan x="33.26" y="0">t kind o</tspan>
+    <tspan class="cls-8" x="87.76" y="0">f</tspan>
+    <tspan x="92.86" y="0" xml:space="preserve"> sou</tspan>
+    <tspan class="cls-9" x="123.04" y="0">r</tspan>
+    <tspan x="128.51" y="0">ces a</tspan>
+    <tspan class="cls-9" x="165.31" y="0">r</tspan>
+    <tspan x="170.78" y="0">e talking about </tspan>
+    <tspan x="0" y="19.2">d</tspan>
+    <tspan class="cls-10" x="10.19" y="19.2">a</tspan>
+    <tspan class="cls-11" x="18.58" y="19.2">ta center ene</tspan>
+    <tspan class="cls-12" x="114.22" y="19.2">r</tspan>
+    <tspan x="119.69" y="19.2">gy?</tspan>
+  </text><text class="cls-13" transform="translate(28.23 225.1)">1<tspan class="cls-14" x="12.79" y="0">.</tspan></text><text class="cls-15" transform="translate(889.22 214.9)">
+    <tspan class="cls-16">T</tspan>
+    <tspan x="8.62" y="0">OPIC</tspan>
+    <tspan x="0" y="19.2">DEFINITION</tspan>
+  </text><text class="cls-15" transform="translate(889.22 383.9)">THEM<tspan class="cls-17" x="44.83" y="0">A</tspan>
+    <tspan class="cls-18" x="55.25" y="0">TI</tspan>
+    <tspan class="cls-19" x="68.69" y="0">C</tspan>
+    <tspan x="79.82" y="0">A</tspan>
+    <tspan class="cls-20" x="91.2" y="0">L</tspan>
+    <tspan x="0" y="19.2">ANA</tspan>
+    <tspan class="cls-21" x="35.1" y="19.2">L</tspan>
+    <tspan class="cls-18" x="41.9" y="19.2">YSIS</tspan>
+  </text><text class="cls-15" transform="translate(889.22 552.9)">SOCIA<tspan class="cls-20" x="49.73" y="0">L</tspan>
+    <tspan x="0" y="19.2">MEDI</tspan>
+    <tspan class="cls-22" x="40.58" y="19.2">A</tspan>
+    <tspan x="0" y="38.4">RE</tspan>
+    <tspan class="cls-12" x="19.44" y="38.4">A</tspan>
+    <tspan class="cls-23" x="30.53" y="38.4">C</tspan>
+    <tspan class="cls-18" x="41.76" y="38.4">TION</tspan>
+  </text><text class="cls-6" transform="translate(554.22 214.9)">Wh<tspan class="cls-7" x="24.88" y="0">a</tspan>
+    <tspan x="33.26" y="0">t a</tspan>
+    <tspan class="cls-12" x="50.88" y="0">r</tspan>
+    <tspan x="56.35" y="0">e the wo</tspan>
+    <tspan class="cls-12" x="118.77" y="0">r</tspan>
+    <tspan class="cls-18" x="124.24" y="0">ds f</tspan>
+    <tspan class="cls-12" x="150.25" y="0">r</tspan>
+    <tspan class="cls-18" x="155.73" y="0">equency o</tspan>
+    <tspan class="cls-24" x="232.37" y="0">f</tspan>
+    <tspan x="237.47" y="0"> </tspan>
+    <tspan x="0" y="19.2">these websites?</tspan>
+  </text><text class="cls-13" transform="translate(517.09 226.89)">2<tspan class="cls-14" x="12.79" y="0">.</tspan></text><text class="cls-6" transform="translate(65.36 373.9)">Wh<tspan class="cls-7" x="24.88" y="0">a</tspan>
+    <tspan x="33.26" y="0">t a</tspan>
+    <tspan class="cls-9" x="50.88" y="0">r</tspan>
+    <tspan class="cls-11" x="56.35" y="0">e the most </tspan>
+    <tspan class="cls-9" x="137.13" y="0">r</tspan>
+    <tspan x="142.61" y="0">el</tspan>
+    <tspan class="cls-7" x="155.79" y="0">a</tspan>
+    <tspan x="164.17" y="0">ted topics to </tspan>
+    <tspan x="0" y="19.2">Ene</tspan>
+    <tspan class="cls-12" x="27.92" y="19.2">r</tspan>
+    <tspan x="33.39" y="19.2">gy conserv</tspan>
+    <tspan class="cls-10" x="112.21" y="19.2">a</tspan>
+    <tspan x="120.59" y="19.2">tion and D</tspan>
+    <tspan class="cls-10" x="196.88" y="19.2">a</tspan>
+    <tspan class="cls-11" x="205.26" y="19.2">ta center </tspan>
+    <tspan x="0" y="38.4">in</tspan>
+    <tspan class="cls-25" x="13.3" y="38.4"> </tspan>
+    <tspan x="17.1" y="38.4">wiKIPEDIA?</tspan>
+  </text><text class="cls-13" transform="translate(28.23 394.1)">3<tspan class="cls-14" x="12.79" y="0">.</tspan></text><text class="cls-6" transform="translate(555.22 373.9)">When was &apos;GREEN <tspan class="cls-26" x="140.29" y="0">C</tspan>
+    <tspan x="151.61" y="0">OMPUTING&apos; </tspan>
+    <tspan x="0" y="19.2">c</tspan>
+    <tspan class="cls-12" x="8" y="19.2">r</tspan>
+    <tspan class="cls-27" x="13.47" y="19.2">e</tspan>
+    <tspan class="cls-7" x="22.53" y="19.2">a</tspan>
+    <tspan x="30.91" y="19.2">ted in</tspan>
+    <tspan class="cls-26" x="72.62" y="19.2"> </tspan>
+    <tspan x="76.43" y="19.2">wIKIPEDI</tspan>
+    <tspan class="cls-12" x="145.37" y="19.2">A</tspan>
+    <tspan x="156.29" y="19.2" xml:space="preserve"> and how it</tspan>
+    <tspan x="0" y="38.4">evolved?</tspan>
+  </text><text class="cls-13" transform="translate(518.09 395.89)">4<tspan class="cls-14" x="12.79" y="0">.</tspan></text><text class="cls-6" transform="translate(65.36 552.9)">Wh<tspan class="cls-7" x="24.88" y="0">a</tspan>
+    <tspan x="33.26" y="0">t is the focus and inclin</tspan>
+    <tspan class="cls-7" x="198.54" y="0">a</tspan>
+    <tspan x="206.93" y="0">tion o</tspan>
+    <tspan class="cls-24" x="248.85" y="0">f</tspan>
+    <tspan x="253.95" y="0" xml:space="preserve"> the </tspan>
+    <tspan x="0" y="19.2">news media on the d</tspan>
+    <tspan class="cls-7" x="152.32" y="19.2">a</tspan>
+    <tspan x="160.7" y="19.2">ta center?</tspan>
+  </text><text class="cls-13" transform="translate(28.23 563.1)">5<tspan class="cls-14" x="12.79" y="0">.</tspan></text><text class="cls-6" transform="translate(554.22 542.9)">Wh<tspan class="cls-7" x="24.88" y="0">a</tspan>
+    <tspan x="33.26" y="0">t is the </tspan>
+    <tspan class="cls-7" x="84.99" y="0">a</tspan>
+    <tspan class="cls-26" x="93.38" y="0">t</tspan>
+    <tspan class="cls-28" x="98.25" y="0">titude o</tspan>
+    <tspan class="cls-24" x="154.81" y="0">f</tspan>
+    <tspan x="159.92" y="0" xml:space="preserve"> the public </tspan>
+    <tspan x="0" y="19.2">towa</tspan>
+    <tspan class="cls-22" x="35.33" y="19.2">r</tspan>
+    <tspan class="cls-28" x="40.8" y="19.2">ds d</tspan>
+    <tspan class="cls-7" x="72.29" y="19.2">a</tspan>
+    <tspan class="cls-18" x="80.67" y="19.2">ta center ene</tspan>
+    <tspan class="cls-12" x="176.32" y="19.2">r</tspan>
+    <tspan class="cls-18" x="181.79" y="19.2">gy </tspan>
+    <tspan x="0" y="38.4">on</tspan>
+    <tspan class="cls-29" x="19.07" y="38.4" xml:space="preserve"> Y</tspan>
+    <tspan x="31.94" y="38.4">OUTUBE?</tspan>
+  </text><text class="cls-13" transform="translate(517.09 564.89)">6<tspan class="cls-14" x="12.79" y="0">.</tspan></text>
+</svg>
