--- a/_questions/visualizations/visualization01.html
+++ b/_questions/visualizations/visualization01.html
@@ -220,7 +220,7 @@
       }
 
       .cls-140, .cls-144, .cls-146, .cls-149, .cls-158, .cls-47 {
-        font-size: 70px;
+        font-size: 64px;
       }
 
       .cls-142, .cls-47 {
@@ -3101,34 +3101,34 @@
       <text class="visfirst5 cls-149" transform="translate(3437.66 1776.73)">BAIDU.COM<tspan x="171.3" y="72">4</tspan></text>
       <text class="visfirst5 cls-149" transform="translate(3437.66 1776.73)">BAIDU.COM<tspan x="171.3" y="72">4</tspan></text>
       <text class="visfirst5 cls-149" transform="translate(3437.66 1776.73)">BAIDU.COM<tspan x="171.3" y="72">4</tspan></text>
-      <text class="visfirst5 cls-149" transform="translate(2590.13 5638.18)">INFORA<tspan x="303.66" y="0">TIONWEEK.</tspan><tspan class="cls-157" x="683.09" y="0">C</tspan><tspan class="cls-164" x="726.05" y="0">OM</tspan><tspan x="304.86" y="72">77,351</tspan></text>
-      <text class="visfirst5 cls-158" transform="translate(2490.83 5633.48)">DATA<tspan class="cls-164" x="168.72" y="0">CENTERKN</tspan><tspan class="cls-171" x="529.8" y="0">O</tspan><tspan class="cls-165" x="580.5" y="0">WLEDGE.</tspan><tspan class="cls-168" x="881.7" y="0">C</tspan><tspan class="cls-145" x="924.65" y="0">OM</tspan><tspan class="cls-145"><tspan x="404.16" y="72">85,215</tspan></tspan></text>
-      <text class="visfirst5 cls-158" transform="translate(2490.83 5633.48)">D<tspan class="cls-169" x="47.16" y="0">A</tspan><tspan class="cls-147" x="86.52" y="0">T</tspan><tspan class="cls-170" x="126.36" y="0">A</tspan><tspan class="cls-164" x="168.72" y="0">CENTERKN</tspan><tspan class="cls-171" x="529.8" y="0">O</tspan><tspan class="cls-165" x="580.5" y="0">WLEDGE.</tspan><tspan class="cls-168" x="881.7" y="0">C</tspan><tspan class="cls-145" x="924.65" y="0">OM</tspan><tspan class="cls-145"><tspan x="404.16" y="72">85,215</tspan></tspan></text>
-      <text class="visfirst5 cls-158" transform="translate(2658.8 5633.48)">D<tspan class="cls-169" x="47.16" y="0">A</tspan><tspan class="cls-172" x="86.52" y="0">T</tspan><tspan x="126.36" y="0">A</tspan><tspan class="cls-165" x="168.72" y="0">CENTER</tspan><tspan class="cls-160" x="434.52" y="0">D</tspan><tspan class="cls-165" x="481.02" y="0">YNAM</tspan><tspan class="cls-145" x="667.74" y="0">-</tspan><tspan class="cls-145"><tspan x="206.31" y="72">I</tspan><tspan class="cls-173" x="230.49" y="72">C</tspan><tspan x="273.75" y="72">S.</tspan><tspan class="cls-157" x="339.45" y="72">C</tspan><tspan class="cls-164" x="382.41" y="72">OM</tspan></tspan></text>
-      <text class="visfirst5 cls-158" transform="translate(2545.13 5633.48)">D<tspan class="cls-169" x="47.16" y="0">A</tspan><tspan class="cls-172" x="86.52" y="0">T</tspan><tspan x="126.36" y="0">A</tspan><tspan class="cls-165" x="168.72" y="0">CENTE</tspan><tspan class="cls-162" x="389.82" y="0">R</tspan><tspan class="cls-145" x="433.32" y="0">JOURNAL.</tspan><tspan class="cls-168" x="773.1" y="0">C</tspan><tspan class="cls-145" x="816.05" y="0">OM</tspan><tspan class="cls-145"><tspan x="329.91" y="72">389,956</tspan></tspan></text>
-      <text class="visfirst5 cls-149" transform="translate(2941.34 1772.49)">JIF<tspan x="102.66" y="0">-</tspan><tspan x="-151.59" y="72">ANG360.</tspan><tspan class="cls-157" x="132.27" y="72">C</tspan><tspan class="cls-165" x="175.23" y="72">OM</tspan></text>
-      <text class="visfirst5 cls-149" transform="translate(2739.68 1772.49)">JI<tspan class="cls-174" x="62.94" y="0">F</tspan><tspan x="100.14" y="0">ANG360.</tspan><tspan class="cls-157" x="384" y="0">C</tspan><tspan x="426.96" y="0">OM</tspan></text>
-      <text class="visfirst5 cls-149" transform="translate(2739.68 1772.49)">JI<tspan class="cls-174" x="62.94" y="0">F</tspan><tspan x="100.14" y="0">ANG360.</tspan><tspan class="cls-157" x="384" y="0">C</tspan><tspan x="426.96" y="0">OM</tspan></text>
-      <text class="visfirst5 cls-149" transform="translate(2941.34 1772.49)">JIF<tspan x="102.66" y="0">-</tspan><tspan x="-151.59" y="72">ANG360.</tspan><tspan class="cls-157" x="132.27" y="72">C</tspan><tspan class="cls-165" x="175.23" y="72">OM</tspan></text>
-      <text class="visfirst5 cls-149" transform="translate(2941.34 1772.49)">JIF<tspan x="102.66" y="0">-</tspan><tspan x="-151.59" y="72">ANG360.</tspan><tspan class="cls-157" x="132.27" y="72">C</tspan><tspan class="cls-165" x="175.23" y="72">OM</tspan></text>
-      <text class="visfirst5 cls-149" transform="translate(2766.14 1772.49)">ID<tspan class="cls-157" x="72" y="0">C</tspan><tspan class="cls-165" x="114.96" y="0">Q</tspan><tspan class="cls-167" x="166.08" y="0">U</tspan><tspan x="214.86" y="0">AN.</tspan><tspan class="cls-168" x="331.08" y="0">C</tspan><tspan x="374.04" y="0">OM</tspan><tspan x="128.85" y="72">46,193</tspan></text>
-      <text class="visfirst5 cls-149" transform="translate(2766.14 1772.49)">ID<tspan class="cls-157" x="72" y="0">C</tspan><tspan class="cls-165" x="114.96" y="0">Q</tspan><tspan class="cls-167" x="166.08" y="0">U</tspan><tspan x="214.86" y="0">AN.</tspan><tspan class="cls-168" x="331.08" y="0">C</tspan><tspan x="374.04" y="0">OM</tspan><tspan x="128.85" y="72">46,193</tspan></text>
-      <text class="visfirst5 cls-149" transform="translate(2766.14 1772.49)">ID<tspan class="cls-157" x="72" y="0">C</tspan><tspan class="cls-165" x="114.96" y="0">Q</tspan><tspan class="cls-167" x="166.08" y="0">U</tspan><tspan x="214.86" y="0">AN.</tspan><tspan class="cls-168" x="331.08" y="0">C</tspan><tspan x="374.04" y="0">OM</tspan><tspan x="128.85" y="72">46,193</tspan></text>
-      <text class="visfirst5 cls-149" transform="translate(2934.23 1776.73)">IDC<tspan x="116.88" y="0">-</tspan><tspan x="-110.61" y="72">Q</tspan><tspan class="cls-159" x="-59.49" y="72">U</tspan><tspan x="-10.71" y="72">AN.</tspan><tspan class="cls-157" x="105.51" y="72">C</tspan><tspan class="cls-165" x="148.47" y="72">OM</tspan></text>
-      <text class="visfirst5 cls-144" transform="translate(2137.59 5638.18)">C<tspan class="cls-165" x="43.26" y="0">SEM</tspan><tspan class="cls-148" x="182.88" y="0">A</tspan><tspan class="cls-145" x="225.24" y="0">G.</tspan><tspan class="cls-157" x="296.46" y="0">C</tspan><tspan class="cls-145" x="339.42" y="0">OM</tspan><tspan class="cls-145"><tspan x="91.59" y="72">343,288</tspan></tspan></text>
-      <text class="visfirst5 cls-149" transform="translate(2193.24 5638.18)">TECH<tspan class="cls-172" x="179.58" y="0">T</tspan><tspan x="219.42" y="0">AR</tspan><tspan x="307.14" y="0">-</tspan><tspan x="18.33" y="72">GE</tspan><tspan class="cls-175" x="108.15" y="72">T</tspan><tspan class="cls-142" x="143.55" y="72">.</tspan><tspan class="cls-176" x="166.83" y="72">C</tspan><tspan x="209.79" y="72">OM</tspan></text>
-      <text class="visfirst5 cls-149" transform="translate(2105.61 5638.18)">IDEALPD<tspan class="cls-167" x="288.36" y="0">U</tspan><tspan class="cls-165" x="337.14" y="0">.</tspan><tspan class="cls-157" x="360.42" y="0">C</tspan><tspan x="403.38" y="0">OM</tspan><tspan x="241.2" y="72">-</tspan></text>
+      <text class="visfirst5 cls-149" transform="translate(2590.13 5638.18)">INFORATIONWEEK.COM<tspan x="304.86" y="72">77,351</tspan></text>
+      <text class="visfirst5 cls-158" transform="translate(2490.83 5633.48)">DATACENTERKNOWLEDGE.COM<tspan x="404.16" y="72">85,215</tspan></text>
+      <text class="visfirst5 cls-158" transform="translate(2490.83 5633.48)">DATACENTERKOWLEDGE.COM<tspan x="404.16" y="72">85,215</tspan></text>
+      <text class="visfirst5 cls-158" transform="translate(2658.8 5633.48)">DATACENTERDYNAM-ICS.COM</text>
+      <text class="visfirst5 cls-158" transform="translate(2545.13 5633.48)">DATACENTERJOURNAL.COM<tspan class="cls-145"><tspan x="329.91" y="72">389,956</tspan></tspan></text>
+      <text class="visfirst5 cls-149" transform="translate(2739.68 1772.49)">JIFANG360.COM</text>
+      <text class="visfirst5 cls-149" transform="translate(2739.68 1772.49)">JIFANG360.COM</text>
+      <text class="visfirst5 cls-149" transform="translate(2739.68 1772.49)">JIFANG360.COM</text>
+      <text class="visfirst5 cls-149" transform="translate(2739.68 1772.49)">JIFANG360.COM</text>
+      <text class="visfirst5 cls-149" transform="translate(2739.68 1772.49)">JIFANG360.COM</text>
+      <text class="visfirst5 cls-149" transform="translate(2766.14 1772.49)">IDQUAN.COM<tspan x="128.85" y="72">46,193</tspan></text>
+      <text class="visfirst5 cls-149" transform="translate(2766.14 1772.49)">IDQUAN.COM<tspan x="128.85" y="72">46,193</tspan></text>
+      <text class="visfirst5 cls-149" transform="translate(2766.14 1772.49)">IDQUAN.COM<tspan x="128.85" y="72">46,193</tspan></text>
+      <text class="visfirst5 cls-149" transform="translate(2766.14 1772.49)">IDQUAN.COM<tspan x="128.85" y="72">46,193</tspan></text>
+      <text class="visfirst5 cls-144" transform="translate(2137.59 5638.18)">CSEMG.COM<tspan class="cls-145"><tspan x="91.59" y="72">343,288</tspan></tspan></text>
+      <text class="visfirst5 cls-149" transform="translate(2193.24 5638.18)">TECHT-GET.COM</text>
+      <text class="visfirst5 cls-149" transform="translate(2105.61 5638.18)">IDEALPDU.COM<tspan x="241.2" y="72">-</tspan></text>
       <text class="visfirst5 cls-149" transform="translate(2221.56 5638.18)">TELIA.FI<tspan x="27.57" y="72">26,162</tspan></text>
-      <text class="visfirst5 cls-149" transform="translate(2140.47 1776.73)">H<tspan class="cls-159" x="50.28" y="0">U</tspan><tspan x="99.06" y="0">AWEI.</tspan><tspan class="cls-157" x="290.7" y="0">C</tspan><tspan class="cls-165" x="333.66" y="0">OM</tspan><tspan x="160.2" y="72">687</tspan></text>
-      <text class="visfirst5 cls-149" transform="translate(2140.47 1776.73)">H<tspan class="cls-159" x="50.28" y="0">U</tspan><tspan x="99.06" y="0">AWEI.</tspan><tspan class="cls-157" x="290.7" y="0">C</tspan><tspan class="cls-165" x="333.66" y="0">OM</tspan><tspan x="160.2" y="72">687</tspan></text>
-      <text class="visfirst5 cls-149" transform="translate(2147.61 1776.73)">H3C.<tspan class="cls-157" x="158.34" y="0">C</tspan><tspan x="201.3" y="0">OM.CN</tspan><tspan x="93.21" y="72">142517</tspan></text>
-      <text class="visfirst5 cls-149" transform="translate(2229.27 1776.73)">GE.<tspan class="cls-168" x="113.1" y="0">C</tspan><tspan x="156.06" y="0">OM</tspan><tspan x="19.86" y="72">12,217</tspan></text>
-      <text class="visfirst5 cls-149" transform="translate(2125.17 1776.73)">SIEMENS.<tspan class="cls-168" x="321.3" y="0">C</tspan><tspan x="364.26" y="0">OM</tspan><tspan x="143.91" y="72">3,627</tspan></text>
-      <text class="visfirst5 cls-149" transform="translate(2127.69 1776.73)">JTL<tspan class="cls-177" x="120.42" y="0">F</tspan><tspan x="157.62" y="0">ANS.</tspan><tspan class="cls-168" x="316.26" y="0">C</tspan><tspan x="359.22" y="0">OM</tspan><tspan x="219.12" y="72">-</tspan></text>
-      <text class="visfirst5 cls-149" transform="translate(2140.92 1776.73)">GZHAK<tspan class="cls-153" x="229.38" y="0">J</tspan><tspan class="cls-165" x="266.52" y="0">.</tspan><tspan class="cls-176" x="289.8" y="0">C</tspan><tspan class="cls-142" x="332.76" y="0">OM</tspan><tspan x="56.67" y="72">3,836,555</tspan></text>
-      <text class="visfirst5 cls-144" transform="translate(2157.96 1776.73)">O<tspan class="cls-165" x="49.5" y="0">TPUB.</tspan><tspan class="cls-157" x="255.72" y="0">C</tspan><tspan class="cls-165" x="298.68" y="0">OM</tspan><tspan class="cls-145"><tspan x="71.22" y="72">521,619</tspan></tspan></text>
-      <text class="visfirst5 cls-149" transform="translate(2143.83 1776.73)">U<tspan class="cls-178" x="49.86" y="0">P</tspan><tspan x="93.72" y="0">SAP</tspan><tspan class="cls-179" x="223.68" y="0">P</tspan><tspan class="cls-165" x="260.7" y="0">.</tspan><tspan class="cls-157" x="283.98" y="0">C</tspan><tspan class="cls-165" x="326.94" y="0">OM</tspan><tspan x="53.76" y="72">2,199,341</tspan></text>
-      <text class="visfirst5 cls-149" transform="translate(2140.47 1776.73)">H<tspan class="cls-159" x="50.28" y="0">U</tspan><tspan x="99.06" y="0">AWEI.</tspan><tspan class="cls-157" x="290.7" y="0">C</tspan><tspan class="cls-165" x="333.66" y="0">OM</tspan><tspan x="160.2" y="72">687</tspan></text>
+      <text class="visfirst5 cls-149" transform="translate(2140.47 1776.73)">HUAWEI.COM<tspan x="160.2" y="72">687</tspan></text>
+      <text class="visfirst5 cls-149" transform="translate(2140.47 1776.73)">HUAWEI.COM<tspan x="160.2" y="72">687</tspan></text>
+      <text class="visfirst5 cls-149" transform="translate(2147.61 1776.73)">H3C.COM.CN<tspan x="93.21" y="72">142517</tspan></text>
+      <text class="visfirst5 cls-149" transform="translate(2229.27 1776.73)">GE.COM<tspan x="19.86" y="72">12,217</tspan></text>
+      <text class="visfirst5 cls-149" transform="translate(2125.17 1776.73)">SIEMENS.COM<tspan x="143.91" y="72">3,627</tspan></text>
+      <text class="visfirst5 cls-149" transform="translate(2127.69 1776.73)">JTLFANS.COM<tspan x="219.12" y="72">-</tspan></text>
+      <text class="visfirst5 cls-149" transform="translate(2140.92 1776.73)">GZHAKJ.COM<tspan x="56.67" y="72">3,836,555</tspan></text>
+      <text class="visfirst5 cls-144" transform="translate(2157.96 1776.73)">OTPUB.COM<tspan class="cls-145"><tspan x="71.22" y="72">521,619</tspan></tspan></text>
+      <text class="visfirst5 cls-149" transform="translate(2143.83 1776.73)">UPSAPP.COM<tspan x="53.76" y="72">2,199,341</tspan></text>
+      <text class="visfirst5 cls-149" transform="translate(2140.47 1776.73)">HUAWEI.COM<tspan x="160.2" y="72">687</tspan></text>
 
   </g>
   <g id="visfrect" class="cls-180">
