--- a/_questions/visualizations/visualization02.html
+++ b/_questions/visualizations/visualization02.html
@@ -73,7 +73,7 @@
 
         .cls-13, .cls-14, .cls-34 {
           font-size: 60px;
-          font-family: NotoSansCJKsc-Medium-GBpc-EUC-H, Noto Sans CJK SC;
+          font-family: AvenirNext-Medium, Avenir Next;;
         }
 
         .cls-13, .cls-14 {
@@ -199,7 +199,7 @@
         .cls-40, .cls-42, .cls-45, .cls-48, .cls-51, .cls-66, .cls-69 {
           font-size: 0px;
           fill: #353535;
-          font-family: NotoSansCJKsc-DemiLight-GBpc-EUC-H, Noto Sans CJK SC;
+          font-family: AvenirNext-Medium, Avenir Next;;
         }
 
         .cls-40, .cls-43 {
