--- a/_questions/visualizations/visualization02.html
+++ b/_questions/visualizations/visualization02.html
@@ -1322,7 +1322,7 @@
     <g id="legendsecond">
       <g>
         <text class="cls-13" transform="translate(795.03 1769.45) scale(1.1 1)">SIZE</text>
-        <text class="cls-14" transform="translate(795.03 2738.81) scale(1.1 1)">COLOR</text>
+        <text class="cls-14" transform="translate(795.03 2738.81) scale(1.1 1)">CONTENT</text>
         <g class="cls-18">
           <line class="cls-19" x1="476.37" y1="3933.04" x2="1115.64" y2="3399.77"/>
           <line class="cls-19" x1="505.18" y1="3933.04" x2="1144.45" y2="3399.77"/>
