--- a/_questions/visualizations/visualization04.html
+++ b/_questions/visualizations/visualization04.html
@@ -441,7 +441,6 @@
         <rect class="cls-1" x="5664.94" y="4494.71" width="868.29" height="96.07"/>
       </clipPath>
     </defs>
-    <title>pro 7</title>
     <g id="others">
       <rect class="cls-2" width="6681.13" height="5615.53"/>
       <rect id="_0709" data-name="0709" class="cls-3" x="1103.97" y="4222.32" width="350.06" height="174.86"/>
@@ -679,7 +678,7 @@
         <text class="cls-89" transform="translate(1370.01 1917.62)">Report to Congress on Server and Data Center Energy Ef<tspan x="2410.5" y="0">-</tspan><tspan x="0" y="99.63" xml:space="preserve">ficiency Public Law 109-431   2007.08.02</tspan></text>
         <circle class="cls-73" cx="1277.78" cy="1894.03" r="20.3"/>
       </g>
-      <g id="T0712EVENT" class="event-hide">
+      <g id="T0712EVENT">
         <text class="cls-87" transform="translate(1371.01 1991.84)">Data center energy efficiency and productivity<tspan class="cls-88"><tspan x="0" y="174.36">http://large.stanford.edu/courses/2017/ph240/yu2/docs/brill.pdf</tspan></tspan></text>
         <text class="cls-89" transform="translate(1371.01 1837.62)"><tspan xml:space="preserve">White paper of the uptime institute    2007.12</tspan></text>
         <circle class="cls-73" cx="1278.78" cy="1809.6" r="20.3"/>
@@ -711,13 +710,13 @@
         <text class="cls-87" transform="translate(1733.76 2141.9)">By consolidating systems using virtualization <tspan x="0" y="87.18">and Dell “PowerEdge”Energy Smart servers </tspan><tspan x="0" y="174.36">organizations can retire legacy hardware to help </tspan><tspan x="0" y="261.53">significantly reduce power and cooling requirements </tspan><tspan x="0" y="348.71">and create a green data center</tspan><tspan class="cls-88" x="0" y="523.07">http://i.dell.com/sites/content/business/solutions/power/en/</tspan><tspan class="cls-88" x="0" y="610.24">Documents/Best_Practices_for_Increasing_Data_Center_Energy_Efficiency.pdf</tspan></text>
         <circle class="cls-72" cx="1630.34" cy="1962.1" r="20.3"/>
       </g>
-      <g id="T0804" class="event-hide">
+      <g id="T0804" class="event-hide" >
         <g id="T0804_EVENT" data-name="T0804 EVENT">
           <text class="cls-87" transform="translate(1714.41 1808.15)">“Energy Logic: Reducing DataCenter Energy Consumption by Creating <tspan x="0" y="87.18">Savings That Cascade Across Systems”</tspan><tspan class="cls-88"><tspan x="0" y="261.53">https://planetaklimata.com.ua/instr/Liebert_Hiross/Emerson_</tspan><tspan x="1933.39" y="261.53">-</tspan><tspan x="0" y="348.71">Network_Power_EnergyLogic_2012_Eng.pdf</tspan></tspan></text>
           <text class="cls-89" transform="translate(1716.6 1653.2)"><tspan xml:space="preserve">White paper of Emerson Network Power    2008.04</tspan></text>
           <circle class="cls-73" cx="1626.01" cy="1628.49" r="20.3"/>
         </g>
-        <g id="T0804-2" class="event-hide" data-name="T0804">
+        <g id="T0804-2"data-name="T0804">
           <text class="cls-90" transform="translate(1734.68 2355.21)"><tspan xml:space="preserve">HITACHI  2008.4.22</tspan></text>
           <text></text>
           <text class="cls-87" transform="translate(1728.78 2501.28)">Reveals greenest data center dream<tspan class="cls-88" x="0" y="174.36">https://www.theregister.co.uk/2008/04/22/hitachi_greenest_data_center_evar/</tspan><tspan x="0" y="261.53"> </tspan></text>
