--- a/_questions/visualizations/visualization05.html
+++ b/_questions/visualizations/visualization05.html
@@ -398,7 +398,7 @@
         }
 
         .cls-86, .cls-87 {
-          stroke: #020202;
+          stroke: #010126;
         }
 
         .cls-86 {
@@ -426,13 +426,13 @@
         }
 
         .color3 {
-          stroke: #020202;
+          stroke: #424244;
         }
         .color3-show{
-          stroke: #000066;
+          stroke: #060014;
         }
         .color3-hide{
-          stroke: #020202;
+          stroke: #424244;
         }
 
         .cls-89 {
@@ -520,7 +520,6 @@
         }
       </style>
     </defs>
-    <title>005_</title>
     <g id="others">
       <rect class="cls-1" width="4222.95" height="2758.91"/>
       <text class="cls-2" transform="translate(29.55 411.27)">BAIDU NEWS SEARCH IN CHINESE</text>
@@ -532,6 +531,7 @@
       <text class="cls-4" transform="translate(1351.46 694.16)">News<tspan class="cls-10" x="119.07" y="0"> </tspan><tspan class="cls-11" x="129.58" y="0">T</tspan><tspan class="cls-12" x="151.56" y="0">opic</tspan></text>
       <text class="cls-4" transform="translate(2784.4 694.16)">News<tspan class="cls-13" x="119.07" y="0"> </tspan><tspan class="cls-11" x="129.58" y="0">T</tspan><tspan x="151.56" y="0">opic</tspan></text>
       <text class="cls-4" transform="translate(2040.18 694.16)">News<tspan class="cls-14" x="119.07" y="0"> </tspan><tspan x="129.86" y="0">A</tspan><tspan class="cls-15" x="162.9" y="0">t</tspan><tspan x="177.5" y="0">titude</tspan></text>
+  <text class="cls-4" transform="translate(1840.18 400.16)">QUERY: DATA CENTER ENERGY</text>
       <text class="cls-16" transform="translate(2069.38 2004.32) scale(0.92 1)">NETURAL</text>
       <text class="cls-16" transform="translate(2068.89 1169.95) scale(0.92 1)">POSITIVE</text>
       <text class="cls-18" transform="translate(2069.85 2363.65) scale(0.92 1)">NEG<tspan class="cls-19" x="117.28" y="0">A</tspan><tspan x="152.96" y="0">TIVE</tspan></text>
