--- a/_questions/visualizations/visualization01.html
+++ b/_questions/visualizations/visualization01.html
@@ -978,7 +978,6 @@
       <rect id="SVGID-44" data-name="SVGID" class="cls-2" x="214.6" y="5265.49" width="317.9" height="26.92"/>
     </clipPath>
   </defs>
-  <title>001</title>
   <g id="visf">
     <rect class="cls-4" x="655.29" width="7605.89" height="7282.39"/>
     <g>
@@ -1775,7 +1774,7 @@
       <text class="cls-51" transform="translate(2967.32 3854.17)">14</text>
       <text class="cls-52" transform="translate(2794.83 3638.17)">DATA CENTER<tspan x="126.59" y="67.2">WEB</tspan></text>
       <text class="cls-51" transform="translate(3607.74 3854.17)">8</text>
-      <text class="cls-52" transform="translate(3423.81 3638.17)">REFERRENCE</text>
+      <text class="cls-52" transform="translate(3423.81 3638.17)">REFERENCE</text>
       <text class="cls-51" transform="translate(4230.27 3854.17)">5</text>
       <text class="cls-52" transform="translate(4046.39 3638.17)">GOVERMENT</text>
       <text class="cls-51" transform="translate(4852.8 3854.17)">4</text>
@@ -2941,9 +2940,9 @@
         <circle id="SVGID-63" data-name="SVGID" class="cls-3" cx="990.13" cy="2022.7" r="120.32"/>
       </g>
       <ellipse class="cls-102" cx="990.13" cy="2022.7" rx="3.9" ry="5.14"/>
-      <text class="cls-103" transform="translate(1203.32 2022.7) scale(1.1 1)">AVERAGE WEBSITE<tspan class="cls-104"><tspan x="0" y="50.11">INLUENCE</tspan><tspan x="0" y="100.22">POWER</tspan></tspan></text>
+      <text class="cls-103" transform="translate(1203.32 2022.7) scale(1.1 1)">AVERAGE WEBSITE<tspan class="cls-104"><tspan x="0" y="50.11">INFLUENCE</tspan><tspan x="0" y="100.22">POWER</tspan></tspan></text>
       <text class="cls-98" transform="translate(795.03 2595.01) scale(1.1 1)">DESCRIPTION</text>
-      <text class="cls-111" transform="translate(795.03 4715.34) scale(1.1 1)">COLOR</text>
+      <text class="cls-111" transform="translate(795.03 4715.34) scale(1.1 1)">CONTENT</text>
       <text class="cls-114" transform="translate(873.37 2765.75)">CHINESE WEBSITE</text>
       <text class="cls-115" transform="translate(879.1 2865.82) scale(1.1 1)">[ WEBSITE NAME ]<tspan x="3.42" y="80.11">GLOBAL RANKING</tspan></text>
       <text class="cls-115" transform="translate(879.1 4160.83) scale(1.1 1)">[ WEBSITE NAME ]<tspan x="3.42" y="80.11">GLOBAL RANKING</tspan></text>
@@ -3080,32 +3079,32 @@
   </g>
   <g id="visflabel">
       <text class="visfirst5 cls-140" transform="translate(7097.78 5638.18)">FCEBOOK.COM<tspan class="cls-142"><tspan x="246.36" y="72">3</tspan></tspan></text>
-      <text class="visfirst5 cls-144" transform="translate(6571.04 1776.73)">CSDN.NET<tspan class="cls-145"><tspan x="130.62" y="72">35</tspan></tspan></text>
+      <text class="visfirst5 cls-144" transform="translate(6560.04 1776.73)">CSDN.NET<tspan class="cls-145"><tspan x="130.62" y="72">35</tspan></tspan></text>
       <text class="visfirst5 cls-146" transform="translate(5859.32 5638.18)">STANFORD.EDU<tspan class="cls-145"><tspan x="199.86" y="72">895</tspan></tspan></text>
       <text class="visfirst5 cls-149" transform="translate(5319.32 5638.18)">NRDC.ORG<tspan x="65.79" y="72">49,721</tspan></text>
-      <text class="visfirst5 cls-149" transform="translate(5350.25 5638.18)">ASHRAE-PHILLY.ORG</text>
+      <text class="visfirst5 cls-149" transform="translate(5140.25 5638.18)">ASHRAE-PHILLY.ORG</text>
       <text class="visfirst5 cls-149" transform="translate(4490.99 5638.18)">DOTMAGAZINE.ONLINE<tspan x="220.05" y="72">2,500,486</tspan></text>
-      <text class="visfirst5 cls-149" transform="translate(4534.52 5638.18)">MISSIONCRITICAL-MAGAZINE.COM</text>
-      <text class="visfirst5 cls-158" transform="translate(4628.54 5638.18)">FORTUNE.COM<tspan class="cls-145"><tspan x="153.99" y="72">3,225</tspan></tspan></text>
-      <text class="visfirst5 cls-149" transform="translate(4691.33 1776.73)">SOHU.COM<tspan x="142.74" y="72">14</tspan></text>
+      <text class="visfirst5 cls-149" transform="translate(4290.52 5638.18)">MISSIONCRITICAL-MAGAZINE.COM</text>
+      <text class="visfirst5 cls-158" transform="translate(4620.54 5638.18)">FORTUNE.COM<tspan class="cls-145"><tspan x="153.99" y="72">3,225</tspan></tspan></text>
+      <text class="visfirst5 cls-149" transform="translate(4670.33 1776.73)">SOHU.COM<tspan x="142.74" y="72">14</tspan></text>
       <text class="visfirst5 cls-149" transform="translate(4090.58 5638.18)">OSTI.GOV<tspan x="49.47" y="72">42,716</tspan></text>
       <text class="visfirst5 cls-149" transform="translate(4082.24 5638.18)">NREL.GOV<tspan x="57.81" y="72">37,292</tspan></text>
       <text class="visfirst5 cls-149" transform="translate(4107.92 5638.18)">LBL.GOV<tspan x="32.13" y="72">29,373</tspan></text>
       <text class="visfirst5 cls-149" transform="translate(4040.69 5638.18)">ENERGY.GOV<tspan x="99.36" y="72">15,097</tspan></text>
       <text class="visfirst5 cls-149" transform="translate(4040.69 5638.18)">ENERGY.GOV<tspan x="99.36" y="72">15,097</tspan></text>
-      <text class="visfirst5 cls-149" transform="translate(3278.72 5638.18)">SCIENCEDIRECT.COM<tspan x="290.34" y="72">226</tspan></text>
+      <text class="visfirst5 cls-149" transform="translate(3268.72 5638.18)">SCIENCEDIRECT.COM<tspan x="290.34" y="72">226</tspan></text>
       <text class="visfirst5 cls-149" transform="translate(3470.48 5638.18)">IEEE.OR<tspan x="98.58" y="72">715</tspan></text>
       <text class="visfirst5 cls-149" transform="translate(3456.65 5638.18)">MDPI.COM<tspan x="80.82" y="72">3,678</tspan></text>
       <text class="visfirst5 cls-149" transform="translate(3412.85 5638.18)">ASHRAE.ORG<tspan x="202.35" y="72">-</tspan></text>
-      <text class="visfirst5 cls-149" transform="translate(3437.66 1776.73)">BAIDU.COM<tspan x="171.3" y="72">4</tspan></text>
-      <text class="visfirst5 cls-149" transform="translate(3437.66 1776.73)">BAIDU.COM<tspan x="171.3" y="72">4</tspan></text>
-      <text class="visfirst5 cls-149" transform="translate(3437.66 1776.73)">BAIDU.COM<tspan x="171.3" y="72">4</tspan></text>
-      <text class="visfirst5 cls-149" transform="translate(3437.66 1776.73)">BAIDU.COM<tspan x="171.3" y="72">4</tspan></text>
+      <text class="visfirst5 cls-149" transform="translate(3420.66 1776.73)">BAIDU.COM<tspan x="171.3" y="72">4</tspan></text>
+      <text class="visfirst5 cls-149" transform="translate(3420.66 1776.73)">BAIDU.COM<tspan x="171.3" y="72">4</tspan></text>
+      <text class="visfirst5 cls-149" transform="translate(3420.66 1776.73)">BAIDU.COM<tspan x="171.3" y="72">4</tspan></text>
+      <text class="visfirst5 cls-149" transform="translate(3420.66 1776.73)">BAIDU.COM<tspan x="171.3" y="72">4</tspan></text>
       <text class="visfirst5 cls-149" transform="translate(2590.13 5638.18)">INFORATIONWEEK.COM<tspan x="304.86" y="72">77,351</tspan></text>
       <text class="visfirst5 cls-158" transform="translate(2490.83 5633.48)">DATACENTERKNOWLEDGE.COM<tspan x="404.16" y="72">85,215</tspan></text>
       <text class="visfirst5 cls-158" transform="translate(2490.83 5633.48)">DATACENTERKOWLEDGE.COM<tspan x="404.16" y="72">85,215</tspan></text>
-      <text class="visfirst5 cls-158" transform="translate(2658.8 5633.48)">DATACENTERDYNAM-ICS.COM</text>
-      <text class="visfirst5 cls-158" transform="translate(2545.13 5633.48)">DATACENTERJOURNAL.COM<tspan class="cls-145"><tspan x="329.91" y="72">389,956</tspan></tspan></text>
+      <text class="visfirst5 cls-158" transform="translate(2490.83 5633.48)">DATACENTERDYNAM-ICS.COM</text>
+      <text class="visfirst5 cls-158" transform="translate(2490.83 5633.48)">DATACENTERJOURNAL.COM<tspan class="cls-145"><tspan x="329.91" y="72">389,956</tspan></tspan></text>
       <text class="visfirst5 cls-149" transform="translate(2739.68 1772.49)">JIFANG360.COM</text>
       <text class="visfirst5 cls-149" transform="translate(2739.68 1772.49)">JIFANG360.COM</text>
       <text class="visfirst5 cls-149" transform="translate(2739.68 1772.49)">JIFANG360.COM</text>
@@ -3116,9 +3115,9 @@
       <text class="visfirst5 cls-149" transform="translate(2766.14 1772.49)">IDQUAN.COM<tspan x="128.85" y="72">46,193</tspan></text>
       <text class="visfirst5 cls-149" transform="translate(2766.14 1772.49)">IDQUAN.COM<tspan x="128.85" y="72">46,193</tspan></text>
       <text class="visfirst5 cls-144" transform="translate(2137.59 5638.18)">CSEMG.COM<tspan class="cls-145"><tspan x="91.59" y="72">343,288</tspan></tspan></text>
-      <text class="visfirst5 cls-149" transform="translate(2193.24 5638.18)">TECHT-GET.COM</text>
-      <text class="visfirst5 cls-149" transform="translate(2105.61 5638.18)">IDEALPDU.COM<tspan x="241.2" y="72">-</tspan></text>
-      <text class="visfirst5 cls-149" transform="translate(2221.56 5638.18)">TELIA.FI<tspan x="27.57" y="72">26,162</tspan></text>
+      <text class="visfirst5 cls-149" transform="translate(2050.24 5638.18)">TECHT-GET.COM</text>
+      <text class="visfirst5 cls-149" transform="translate(2050.0 5638.18)">IDEALPDU.COM<tspan x="241.2" y="72">-</tspan></text>
+      <text class="visfirst5 cls-149" transform="translate(2200.56 5638.18)">TELIA.FI<tspan x="27.57" y="72">26,162</tspan></text>
       <text class="visfirst5 cls-149" transform="translate(2140.47 1776.73)">HUAWEI.COM<tspan x="160.2" y="72">687</tspan></text>
       <text class="visfirst5 cls-149" transform="translate(2140.47 1776.73)">HUAWEI.COM<tspan x="160.2" y="72">687</tspan></text>
       <text class="visfirst5 cls-149" transform="translate(2147.61 1776.73)">H3C.COM.CN<tspan x="93.21" y="72">142517</tspan></text>
